[project]
name = "vardbg"
version = "0.11.7"
description = "A simple Python debugger and profiler that generates animated visualizations of program flow."
authors = [
    {name = "Danny Lin", email = "danny@kdrag0n.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["debug", "debugger", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers"
]

dependencies = [
    "dictdiffer>=0.8.1,<1.0",
    "jsonpickle>=1.2,<3.0",
    "opencv-python>=4.1.2",
    "pillow>=10.0.0",
    "sortedcontainers>=2.1.0,<3.0",
    "toml>=0.10.0,<1.0",
    "pygments>=2.5.2",
    "click>=7.0",
    "colorama>=0.4.3,<1.0",
    "imageio>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=20.8b1",
    "pre-commit>=2.1.1",
    "isort>=5.8.0",
]

[project.scripts]
vardbg = "vardbg.main:main"

[project.urls]
Repository = "https://github.com/CCExtractor/vardbg"
Documentation = "https://github.com/CCExtractor/vardbg/blob/master/README.md"
"Bug Tracker" = "https://github.com/CCExtractor/vardbg/issues"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
